--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Front techs course prototype",
   "main": "index.js",
   "scripts": {
-    "copy": "copy src\\index.html dist",
-    "build": "npm run copy & webpack --display-error-details",
+    "clean": "rmdir /s /q dist",
+    "copy": "mkdir dist & copy src\\index.html dist",
+    "prebuild": "npm run clean & npm run copy",
+    "build": "webpack --display-error-details",
     "start": "webpack-dev-server --content-base dist"
   },
   "author": "",
